package com.sushkevych.securitydevices;

import "com/sushkevych/securitydevices/input/reqreply/device/get_by_id.proto";
import "com/sushkevych/securitydevices/input/reqreply/device/get_all.proto";
import "com/sushkevych/securitydevices/input/reqreply/device/stream_by_id.proto";

service DeviceService {

  rpc getAll(request.device.get_all.proto.GetAllDevicesRequest)
      returns (request.device.get_all.proto.GetAllDevicesResponse);

  rpc getById(request.device.get_by_id.proto.GetByIdDeviceRequest)
      returns (request.device.get_by_id.proto.GetByIdDeviceResponse);

  rpc streamById(request.device.stream_by_id.proto.StreamByIdRequest)
      returns (stream request.device.stream_by_id.proto.StreamByIdResponse);
}
