syntax = "proto3";

package com.sushkevych.securitydevices.request.device.delete.proto;

option java_multiple_files = true;

import "com/sushkevych/securitydevices/commonmodels/device/device.proto";

message DeleteDeviceRequest {
  string device_id = 1;
}

message DeleteDeviceResponse {
  oneof response {
    Success success = 1;
    Failure failure = 2;
  }

  message Success {

  }

  message Failure {
    string message = 100;
  }
}
